--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.json:json:20171018'
     implementation 'com.squareup.okhttp3:okhttp:3.14.6'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
